--- a/reactjsd3/src/App.css
+++ b/reactjsd3/src/App.css
@@ -36,3 +36,41 @@
     transform: rotate(360deg);
   }
 }
+    html,
+    body {
+      width: 100%;
+      height: 100%;
+      padding: 0;
+      margin: 0;
+    }
+
+    svg {
+      width: 100%;
+      height: 100%;
+    }
+
+    .axis path,
+    .axis line {
+      fill: none;
+      stroke: #555;
+    }
+
+    .axis text {
+      fill: #555;
+      font-size: 12px;
+    }
+    html, #root, .App{
+      width:  100%;
+      height:  100%;
+      display:  block;
+      
+    }
+    .content {
+      display: block;
+      width: 100%;
+      height: 100%;
+      min-width: 300px;
+      max-width: 960px;
+      max-height: 500px;
+      overflow: hidden;
+    }
