--- a/reactjsd3/src/App.css
+++ b/reactjsd3/src/App.css
@@ -67,10 +67,8 @@
     }
     .content {
       display: block;
-      width: 100%;
-      height: 100%;
-      min-width: 300px;
-      max-width: 960px;
-      max-height: 500px;
+      min-width: 100%;
+      min-height: 100%;
+ 
       overflow: hidden;
     }
