--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
+.navigation a{
+  text-decoration:  none;
+  font-size:  2.5em;
+  padding:  0px  20px;
+  display:  block;
+  float:  left;
+  cursor: pointer;
+}
+.navigation a:hover{
+  color:  red;
+  font-weight:  900;
+}
 
 
