--- a/src/App.css
+++ b/src/App.css
@@ -59,3 +59,11 @@ html, #root, .App {
     min-width: 100%;
     min-height: 100%;
 }
+.navigation{
+    display: block;
+    clear: both;
+    line-height: 2.5em;
+    width: 100%;
+    height: 2.5em;
+
+}
