--- a/src/App.css
+++ b/src/App.css
@@ -75,17 +75,25 @@ html, #root, .App {
     background-color:  #fff;
 }
 
-
-.arc text {
-    font: 12px arial;
-    text-anchor: middle;
- }
- 
- .arc path {
-    stroke: #fff;
- }
-
-.title {
-    fill: green;
-    font-weight: italic;
- }
+.node circle {
+    fill: #999;
+  }
+  
+  .node text {
+    font: 10px sans-serif;
+  }
+  
+  .node--internal circle {
+    fill: #555;
+  }
+  
+  .node--internal text {
+    text-shadow: 0 1px 0 #fff, 0 -1px 0 #fff, 1px 0 0 #fff, -1px 0 0 #fff;
+  }
+  
+  .link {
+    fill: none;
+    stroke: #555;
+    stroke-opacity: 0.4;
+    stroke-width: 1.5px;
+  }
